--- a/galerie.css
+++ b/galerie.css
@@ -32,103 +32,81 @@ nav a:hover {
     color: #00bcd4;
 }
 
-/* Section timeline */
-#timeline {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+*{
+  box-sizing: border-box;
 }
 
-#timeline h2 {
-    text-align: center;
-    margin-bottom: 2rem;
+body {
+  background-color: #f1f1f1;
+  padding: 20px;
+  font-family: Arial;
 }
 
-.timeline {
-    display: flex;
-    justify-content: center;
-    gap: 2rem; /* Espacement entre les boutons */
+
+/* Center website */
+.main {
+  max-width: 1000px;
+  margin: auto;
 }
 
-.timeline-event {
-    /*background-color: #651;*/
-    background: linear-gradient(to top right, #550, #b90);
-    color: white;
-    padding: 1rem 2rem;
-    border-radius: 20px;
-    text-align: center;
-    cursor: pointer;
-    transition: transform 0.2s, background-color 0.2s;
+h1 {
+  font-size: 50px;
+  word-break: break-all;
 }
 
-.timeline img {
-    width: 100px;
-    height: 100px;
-    border-radius: 10%;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    flex-direction: row;
+.row {
+  margin: 10px -16px;
 }
 
-.timeline-event:hover {
-    background: linear-gradient(to top right, #cc0, #b90);
-    transform: scale(1.1);
+/* Add padding BETWEEN each column */
+.row,
+.row > .column {
+  padding: 8px;
 }
 
-.timeline-date {
-    font-weight: bold;
-    display: block;
-    margin-bottom: 0.5rem;
+/* Create three equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 33.33%;
+  display: none; /* Hide all elements by default */
 }
 
-.timeline-content {
-    font-size: 0.9rem;
+/* Clear floats after rows */ 
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
-#timeline2 {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 90vh; /* Utilisation de toute la hauteur de l'écran */
+/* Content */
+.content {
+  background-color: white;
+  padding: 10px;
 }
 
-#timeline2 h2 {
-    text-align: center;
-    margin-bottom: 2rem;
-    font-size: 100px;
+/* The "show" class is added to the filtered elements */
+.show {
+  display: block;
 }
 
-.timeline2 {
-    display: flex;
-    justify-content: center;
+/* Style the buttons */
+.btn {
+  border: none;
+  outline: none;
+  padding: 12px 16px;
+  background-color: white;
+  cursor: pointer;
 }
 
-.timeline-event2 {
-    background: linear-gradient(to top right, #aa0, #a03);
-    color: white;
-    padding: 1rem 2rem;
-    border-radius: 20px;
-    text-align: center;
-    cursor: pointer;
-    transition: transform 0.2s, background-color 0.2s;
+.btn:hover {
+  background-color: #ddd;
 }
 
-.timeline-event2:hover {
-    background: linear-gradient(to top right, #cc0, #b90);
-    transform: scale(1.5);
+.btn.active {
+  background-color: #666;
+  color: white;
 }
 
-.timeline-date2 {
-    font-weight: bold;
-    display: block;
-}
-
-.timeline-content2 {
-    font-size: 0.9rem;
-}
 
 section, section video {
     padding: 5rem 1rem;
