--- a/galerie.css
+++ b/galerie.css
@@ -80,7 +80,7 @@ h1 {
 
 /* Content */
 .content {
-  background-color: white;
+  background: linear-gradient(to top right, #950, #b90);
   padding: 10px;
 }
 
