--- a/galerie.css
+++ b/galerie.css
@@ -93,17 +93,17 @@ h1 {
 .btn {
   border: none;
   outline: none;
-  padding: 12px 16px;
-  background-color: white;
+  padding: 16px 16px;
+  background: linear-gradient(to top right, #530, #950);
   cursor: pointer;
 }
 
 .btn:hover {
-  background-color: #ddd;
+  background: linear-gradient(to top right, #a60, #b90);
 }
 
 .btn.active {
-  background-color: #666;
+  background: linear-gradient(to top right, #950, #b90);
   color: white;
 }
 
