--- a/galerie.css
+++ b/galerie.css
@@ -96,6 +96,10 @@ h1 {
   border-radius: 20px;
 }
 
+.content:hover {
+  transform: scale(1.1);
+}
+
 .content img {
     border-radius: 10%;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -110,7 +114,7 @@ h1 {
 .btn {
   border: none;
   outline: none;
-  padding: 16px 16px;
+  padding: 15px 15px;
   background: linear-gradient(to top right, #084, #053);
   cursor: pointer;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -119,11 +123,15 @@ h1 {
 
 .btn:hover {
   background: linear-gradient(to top right, #0ca, #156);
+  transform: scale(1.1);
 }
 
 .btn.active {
   background: linear-gradient(to top right, #0ca, #156);
   color: white;
+  scale: 1.1;
+  padding: 20px 20px;
+  margin: 5px;
 }
 
 
