--- a/galerie.css
+++ b/galerie.css
@@ -77,7 +77,7 @@ h1 {
 /* Create three equal columns that floats next to each other */
 .column {
   float: left;
-  width: 33.33%;
+  width: 50%;
   display: none; /* Hide all elements by default */
 }
 
@@ -101,8 +101,14 @@ h1 {
 }
 
 .content img {
-    border-radius: 10%;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 10%;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.content video {
+  border-radius: 10%;
+  padding: 5px 5px;
+  max-width: 350px;
 }
 
 /* The "show" class is added to the filtered elements */
@@ -135,8 +141,7 @@ h1 {
 }
 
 
-section, section video {
-    padding: 5rem 1rem;
+section {
     max-width: 800px;
     margin: 0 auto;
     text-align: center;
