--- a/galerie.css
+++ b/galerie.css
@@ -2,7 +2,7 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
-    background: linear-gradient(to top left, #fff, #252);
+    background: linear-gradient(to top left, #0a5, #252);
 }
 
 /* Navigation */
@@ -94,6 +94,7 @@ h1 {
   padding: 20px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 20px;
+  transition: transform 0.2s, background-color 0.2s;
 }
 
 .content:hover {
@@ -120,10 +121,11 @@ h1 {
   border: none;
   outline: none;
   padding: 15px 15px;
-  background: linear-gradient(to top right, #084, #053);
+  background: linear-gradient(to top right, #095, #156);
   cursor: pointer;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
+  transition: transform 0.2s, background-color 0.2s;
 }
 
 .btn:hover {
