--- a/galerie.css
+++ b/galerie.css
@@ -182,18 +182,33 @@ h1 {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.8);
-    backdrop-filter: blur(5px); /* Ajoute un flou */
+    backdrop-filter: blur(5px);
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    text-align: center;
+    padding: 20px;
 }
 
+/* Style du contenu dans la modale */
 .modal-content {
     max-width: 90%;
-    max-height: 90%;
+    max-height: 70%;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
 }
 
+/* Style du texte sous l'image/vidéo */
+.modal-caption {
+    color: white;
+    font-size: 1.5rem;
+    margin-top: 10px;
+    max-width: 80%;
+    text-align: center;
+    font-weight: bold;
+}
+
+/* Style du bouton de fermeture */
 .close {
     position: absolute;
     top: 20px;
