--- a/sm64tls/sm64tls.css
+++ b/sm64tls/sm64tls.css
@@ -12,6 +12,10 @@ header {
     color: white;
     text-align: center;
     padding: 20px;
+    text-decoration: underline;
+    font-style: italic;
+    text-shadow: 1px 1px 10px black, 0 0 1em black, 0 0 5em black;
+
 }
 
 .fade-in {
@@ -45,55 +49,55 @@ header {
 }
 
 .button1 {
-  background-color: #35ca54;
+  background-color: #009212;
   color: black;
   border: 22px outset;
-  border-color: #23b842;
+  border-color: #00B418;
 }
 
 .button1:hover {
-  background-color: #35ca54;
+  background-color: #009212;
   color: #fff;
-  border-color: #23b842;
+  border-color: #00B418;
   transform: scale(1.1);
 }
 .button2 {
-  background-color: #2445be;
+  background-color: #2147B9;
   color: black;
   border: 22px outset;
-  border-color: #1333ad;
+  border-color: #3667E6;
 }
 
 .button2:hover {
-  background-color: #2445be;
+  background-color: #2147B9;
   color: #fff;
-  border-color: #1333ad;
+  border-color: #3667E6;
   transform: scale(1.1);
 }
 .button3 {
-  background-color: #aa1921;
+  background-color: #AA4D3F;
   color: black;
   border: 22px outset;
-  border-color: #991711;
+  border-color: #97382A;
 }
 
 .button3:hover {
-  background-color: #a41921;
+  background-color: #AA4D3F;
   color: #fff;
-  border-color: #991711;
+  border-color: #97382A;
   transform: scale(1.1);
 }
 .button4 {
-  background-color: #981598;
+  background-color: #BC51AB;
   color: black;
   border: 22px outset;
-  border-color: #781598;
+  border-color: #9C3A8B;
 }
 
 .button4:hover {
-  background-color: #981598;
+  background-color: #BC51AB;
   color: #fff;
-  border-color: #781598;
+  border-color: #9C3A8B;
   transform: scale(1.1);
 }
 
@@ -104,6 +108,8 @@ main {
 
 h1 {
     font-size: 50px;
+    text-decoration: underline;
+    text-shadow: 1px 1px 10px black, 0 0 1em black, 0 0 5em black;
 }
 
 .center-text {
@@ -181,5 +187,5 @@ h1 {
     align-items: center;
     gap: 20px;
     margin-bottom: 30px;
-    font-size: 16px;
+    font-size: 20px;
 }
