--- a/sm64tls/sm64tls.css
+++ b/sm64tls/sm64tls.css
@@ -131,3 +131,26 @@ section {
     margin: 40px 0;
     position: relative;
 }
+
+/* Style pour le bouton */
+#topButton {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    border: none;
+    color: black;
+    background: #cadec5; 
+    border: 3px solid #4a504a;
+    padding: 10px 20px;
+    text-align: center;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 10px;
+    transition: transform 0.2s, background 0.3s;
+    display: none; /* Caché par défaut */
+}
+
+
+#topButton:hover {
+    transform: scale(1.1);
+}
