--- a/sm64tls/sm64tls.css
+++ b/sm64tls/sm64tls.css
@@ -69,6 +69,20 @@ footer {
 .button3 { background: #AA4D3F; border: 3px solid #97382A; }
 .button4 { background: #BC51AB; border: 3px solid #9C3A8B; }
 
+.button5 { 
+    background: linear-gradient(to right, rgba(35,35,35,1) 60%, rgba(255,255,255,0));
+    padding: 40px 100px; 
+    font-size: 50px;
+    border-radius: 0px;
+}
+.button5:hover {
+    transform: scale(1.1);
+    border-top: 5px solid #999;
+    border-bottom: 5px solid #999;
+    color: #daca12;
+    text-shadow: 5px 5px #000;
+}
+
 main {
     width: 80%;
     margin: 40px auto;
@@ -96,9 +110,18 @@ section {
     margin-bottom: 30px;
 }
 
+.center-text {
+    display: flex;
+    align-items: center;
+    margin-bottom: 30px;
+    text-align: center;
+    justify-content: center;
+}
+
 .text-image-credits {
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 20px;
     margin-bottom: 30px;
 }
@@ -118,7 +141,8 @@ section {
 }
 
 .text-image.right {
-    flex-direction: row-reverse;
+    flex-direction: row;
+    justify-content: right;
 }
 
 .large-image {
@@ -139,6 +163,12 @@ section {
 .copyrights {
     text-align: center;
     color: gray;
+}
+
+.button-after {
+    display: flex;
+    text-align: center;
+    justify-content: center;
 }
 
 .styled-separator {
