--- a/sm64tls/sm64tls.css
+++ b/sm64tls/sm64tls.css
@@ -50,7 +50,7 @@ footer {
     position: fixed;
     top: 20px;
     right: -300px;
-    background: linear-gradient(to bottom, #FFD700, #FF4500);
+    background: #BC51AB;
     color: white;
     padding: 15px;
     border-radius: 15px;
@@ -59,7 +59,7 @@ footer {
     flex-direction: column;
     align-items: center;
     gap: 10px;
-    border: 3px solid #B22222;
+    border: 3px solid #9C3A8B;
     font-family: 'Press Start 2P', cursive;
     transition: right 0.5s ease-in-out;
 }
@@ -79,7 +79,7 @@ footer {
     font-family: 'Press Start 2P', cursive;
 }
 .music-popup button:hover {
-    background: #00BFFF;
+    transform: scale(1.1);
 }
 .volume-slider {
     width: 100%;
@@ -93,15 +93,21 @@ footer {
     position: fixed;
     top: 20px;
     right: 20px;
-    background: #FFD700;
-    color: black;
-    border: none;
+    background: #BC51AB;
+    color: white;
+    border: solid;
     padding: 10px 15px;
     font-size: 14px;
     font-weight: bold;
     cursor: pointer;
-    border-radius: 5px;
+    border: 3px solid #9C3A8B;
+    border-radius: 10px;
     display: none;
+    cursor: pointer;
+}
+
+.toggle-popup-button:hover {
+    transform: scale(1.1);
 }
 
 .flex-container {
@@ -130,7 +136,7 @@ footer {
 .button1 { background: #009212; border: 3px solid #00B418; }
 .button2 { background: #2147B9; border: 3px solid #3667E6; }
 .button3 { background: #AA4D3F; border: 3px solid #97382A; }
-.button4 { background: #BC51AB; border: 3px solid #9C3A8B; }
+.button4 { background: #cadec5; border: 3px solid #4a504a; }
 
 .button5 { 
     background: linear-gradient(to right, rgba(35,35,35,1) 60%, rgba(255,255,255,0));
@@ -264,4 +270,82 @@ section {
 
 #topButton:hover {
     transform: scale(1.1);
+}
+
+
+:root {
+  --glow-rgb: 239 42 201;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.glow-point {
+  position: fixed;
+  box-shadow: 0rem 0rem 1.2rem 0.6rem rgb(var(--glow-rgb));
+  pointer-events: none;
+}
+
+.star {
+  position: absolute;
+  z-index: 2;
+  color: white;
+  font-size: 1rem;
+  animation-duration: 1500ms;
+  animation-fill-mode: forwards;
+  pointer-events: none;
+}
+
+@keyframes fall-1 {
+  0% {
+    transform: translate(0px, 0px) rotateX(45deg) rotateY(30deg) rotateZ(0deg) scale(0.25);
+    opacity: 0;
+  }
+  
+  5% {
+    transform: translate(10px, -10px) rotateX(45deg) rotateY(30deg) rotateZ(0deg) scale(1);
+    opacity: 1;
+  }
+  
+  100% {
+    transform: translate(25px, 200px) rotateX(180deg) rotateY(270deg) rotateZ(90deg) scale(1);
+    opacity: 0;
+  }
+}
+
+@keyframes fall-2 {
+  0% {
+    transform: translate(0px, 0px) rotateX(-20deg) rotateY(10deg) scale(0.25);
+    opacity: 0;
+  }
+  
+  10% {
+    transform: translate(-10px, -5px) rotateX(-20deg) rotateY(10deg) scale(1);
+    opacity: 1;
+  }
+  
+  100% {
+    transform: translate(-10px, 160px) rotateX(-90deg) rotateY(45deg) scale(0.25);
+    opacity: 0;
+  }
+}
+
+@keyframes fall-3 {
+  0% {
+    transform: translate(0px, 0px) rotateX(0deg) rotateY(45deg) scale(0.5);
+    opacity: 0;
+  }
+  
+  15% {
+    transform: translate(7px, 5px) rotateX(0deg) rotateY(45deg) scale(1);
+    opacity: 1;
+  }
+  
+  100% {
+    transform: translate(20px, 120px) rotateX(-180deg) rotateY(-90deg) scale(0.5);
+    opacity: 0;
+  }
 }
