--- a/sm64tls/sm64tls.css
+++ b/sm64tls/sm64tls.css
@@ -338,6 +338,30 @@ section {
         max-width: 250px; /* Taille réduite sur mobile */
     }
 
+    /* 📸 Ajuster les images */
+    .text-image.right {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .text-image.right img {
+        width: 100%;
+        max-width: 250px; /* Taille réduite sur mobile */
+    }
+
+    /* 📸 Ajuster les images */
+    .text-image-credits {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .text-image-credits img {
+        width: 100%;
+        max-width: 250px; /* Taille réduite sur mobile */
+    }
+
     /* 📜 Ajuster les sections */
     section {
         padding: 20px;
@@ -399,5 +423,13 @@ section {
 
     .music-popup.show {
         right: 5%;
+    }
+}
+
+@media (max-width: 768px) {
+    .fade-in {
+        opacity: 1 !important;
+        transform: translateY(0) !important;
+        transition: none !important;
     }
 }
