--- a/sm64tls/sm64tls.css
+++ b/sm64tls/sm64tls.css
@@ -47,10 +47,14 @@ footer {
 }
 
 .music-popup {
-    position: fixed;
+    position: absolute;
     top: 20px;
     right: -300px;
     background: linear-gradient(to right, rgba(0, 0, 0, 1) 60%, rgba(255, 255, 255, 0)); /* Dégradé vers la droite */
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    transition: background-image 0.5s ease-in-out; /* Effet fluide au changement */
     color: white;
     padding: 15px;
     border-radius: 15px;
@@ -63,20 +67,6 @@ footer {
     font-family: 'Press Start 2P', cursive;
     transition: right 0.5s ease-in-out;
     overflow: hidden; /* Évite que l’image dépasse */
-}
-
-/* Ajout d'une image de fond */
-.music-popup::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: url("media/intro.png") no-repeat center center;
-    background-size: cover;
-    opacity: 0.6; /* Rend l'image semi-transparente */
-    z-index: -1; /* Place l'image derrière le contenu du pop-up */
 }
 .music-popup.show {
     right: 20px;
@@ -95,6 +85,13 @@ footer {
 }
 .music-popup button:hover {
     transform: scale(1.1);
+}
+.music-title {
+    font-size: 12px;
+    color: #fff;
+    font-style: italic;
+    margin-top: 5px;
+    text-align: center;
 }
 .volume-slider {
     width: 100%;
